[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/coin.png" type="Texture" id=1]
[ext_resource path="res://sprites/init_1.png" type="Texture" id=2]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=3]
[ext_resource path="res://sprites/kills.png" type="Texture" id=4]
[ext_resource path="res://sprites/init_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/init_4.png" type="Texture" id=6]
[ext_resource path="res://sprites/init_3.png" type="Texture" id=7]
[ext_resource path="res://sprites/init_5.png" type="Texture" id=8]
[ext_resource path="res://sprites/init_6.png" type="Texture" id=9]
[ext_resource path="res://sprites/init_9.png" type="Texture" id=10]
[ext_resource path="res://sprites/init_7.png" type="Texture" id=11]
[ext_resource path="res://sprites/init_8.png" type="Texture" id=12]
[ext_resource path="res://sprites/init_10.png" type="Texture" id=13]
[ext_resource path="res://sprites/dice_2.png" type="Texture" id=14]
[ext_resource path="res://sprites/dice_1.png" type="Texture" id=15]

[node name="GUI" type="Control"]
margin_right = 1020.0
margin_bottom = 603.0
script = ExtResource( 3 )
number_textures = [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 13 ) ]

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -298.295
margin_right = 1.70532
margin_bottom = 150.0

[node name="P1" type="HBoxContainer" parent="Panel"]
margin_left = 26.9087
margin_top = 5.88628
margin_right = 276.909
margin_bottom = 71.8863
custom_constants/separation = 25

[node name="player_num" type="TextureRect" parent="Panel/P1"]
margin_right = 64.0
margin_bottom = 66.0
texture = ExtResource( 15 )

[node name="p1_kills" type="TextureRect" parent="Panel/P1"]
margin_left = 89.0
margin_right = 153.0
margin_bottom = 66.0
texture = ExtResource( 4 )

[node name="count" type="TextureRect" parent="Panel/P1/p1_kills"]
visible = false
margin_left = 31.748
margin_top = -0.793701
margin_right = 95.748
margin_bottom = 63.2063
texture = ExtResource( 2 )

[node name="p1_coins" type="TextureRect" parent="Panel/P1"]
margin_left = 178.0
margin_right = 242.0
margin_bottom = 66.0
texture = ExtResource( 1 )

[node name="count" type="TextureRect" parent="Panel/P1/p1_coins"]
visible = false
margin_left = 25.3984
margin_top = -4.7622
margin_right = 89.3984
margin_bottom = 59.2378
texture = ExtResource( 2 )

[node name="P2" type="HBoxContainer" parent="Panel"]
margin_left = 26.9087
margin_top = 76.9317
margin_right = 276.909
margin_bottom = 142.932
custom_constants/separation = 25

[node name="player_num" type="TextureRect" parent="Panel/P2"]
margin_right = 64.0
margin_bottom = 66.0
texture = ExtResource( 14 )

[node name="p2_kills" type="TextureRect" parent="Panel/P2"]
margin_left = 89.0
margin_right = 153.0
margin_bottom = 66.0
texture = ExtResource( 4 )

[node name="count" type="TextureRect" parent="Panel/P2/p2_kills"]
visible = false
margin_left = 31.748
margin_top = -0.793701
margin_right = 95.748
margin_bottom = 63.2063
texture = ExtResource( 2 )

[node name="p2_coins" type="TextureRect" parent="Panel/P2"]
margin_left = 178.0
margin_right = 242.0
margin_bottom = 66.0
texture = ExtResource( 1 )

[node name="count" type="TextureRect" parent="Panel/P2/p2_coins"]
visible = false
margin_left = 25.3984
margin_top = -4.7622
margin_right = 89.3984
margin_bottom = 59.2378
texture = ExtResource( 2 )
